# DuckStream

./: .gitignore  Makefile.toml  README.md  duckstream.code-workspace
.github/workflows/: build-check-ml.yaml  build-check-server.yaml  docker-build.yaml  terraform.yaml
client/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
client/font/: font.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/draw/: layout.tsx  page.tsx
client/src/app/draw/components/: DrawCondition.tsx  DrawEditor.tsx  KonvasEditor.tsx
client/src/types/: app.ts
client/src/utils/: position.ts
database/init/: 00_init.sql
docker/: docker-compose.database.yaml  docker-compose.ml.yaml  docker-compose.server.yaml  docker-compose.yaml
ml/: .gitignore  README.md  pyproject.toml
ml/src/: download_model.py  image_converter.py  main.py  models.py  morphoto.py  prompt_converter.py  text_filter.py
ml/src/configs/: __init__.py  config.py
ml/tests/: _test_inference.py  test_text_filter.py
server/: Makefile.toml  server.sln
server/api/Properties/: launchSettings.json
server/database/: Dockerfile
server/src/: .editorconfig  Dockerfile  global.json
server/src/Api/: Api.fsproj  Domain.fs  Handler.fs  Program.fs
server/src/Api/Business/: CommandHandler.fs  Infra.fs  Persistence.fs
server/src/Api/Properties/: launchSettings.json
server/src/Api/Repositories/: Database.fs  GCS.fs  ML.fs  Mock.fs
server/src/Test/: Tests.fs
server/test/Test/: Test.fsproj  Tests.fs
terraform/: .gitignore  Makefile.toml  versions.tf
(+18 files in other folders)
