[tool.poetry]
name = "duckstream"
version = "0.1.0"
description = ""
authors = ["ryoya0902 <ryuasa1192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
openai = "^0.27.8"
omegaconf = "^2.3.0"
pillow = "^10.0.0"
sympy = "^1.12"
torch = [
    { version = "^2.0.1+cu118", source = "torch_cu118", markers = "sys_platform != 'darwin'" },
    { version = "^2.0.1+cpu", source = "torch_cpu", markers = "sys_platform == 'darwin'" },
]
python-dotenv = "^1.0.0"
diffusers = "^0.18.2"
transformers = "^4.30.2"
fastapi = "0.70.0"
uvicorn = "^0.23.0"
accelerate = "^0.21.0"
modal-client = "^0.54.3773"
yarl = "^1.9.2"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.1.3"

[tool.black]
line-length = 128

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]